# passi-cli

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  design.md  specification.md
scripts/: setup_r_portable.ps1
src/passi/: __init__.py  config.py  main.py
src/passi/api/: server.py
src/passi/executors/: python_executor.py  r_executor.py  sandbox.py
src/passi/infra/: context.py  hooks.py  llm_client.py  plan.py  provenance.py  runtime.py  session.py  task_tracker.py
src/passi/knowledge/: formats.py  methods.py  pipelines.py
src/passi/prompts/: __init__.py  afk_mode.txt  base_system.txt  bioinfo_principles.txt  compact_summary.txt  data_format_check.txt  domain_clinical.txt  domain_epigenetics.txt  domain_genomics.txt  domain_metabolomics.txt  domain_transcriptomics.txt  manager.py  plan_first.txt  plan_mode.txt  plan_qa.txt  step_confirm.txt  tool_use_guidelines.txt
src/passi/soul/: passi_agent.py  protocol.py
src/passi/tools/: ask_user_tool.py  base.py  clinical_tools.py  enrichment_tools.py  epigenetics_tools.py  exec_tools.py  genomics_tools.py  io_tools.py  qc_tools.py  registry.py  system_tools.py  transcriptomics_tools.py
src/passi/ui/: cli.py  print_mode.py  prompts.py
src/passi/wire/: persistence.py  protocol.py
src/tests/: conftest.py  test_main.py
src/tests/fixtures/: data_factories.py  mock_llm.py
src/tests/test_api/: __init__.py  test_server.py
src/tests/test_executors/: test_r_executor.py
src/tests/test_infra/: test_compaction.py  test_config.py  test_context.py  test_hooks.py  test_llm_client.py  test_llm_integration.py  test_plan.py  test_session.py  test_task_tracker.py
src/tests/test_integration/: test_metabolomics_e2e.py
src/tests/test_knowledge/: test_formats.py  test_methods.py
src/tests/test_prompts/: test_prompt_manager.py
src/tests/test_soul/: test_passi_agent.py
src/tests/test_tools/: conftest.py  test_ask_user_tool.py  (+10 more)
(+10 files in other folders)
