[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digitagent"
version = "0.1.0"
description = "Passi agent for multi-omics bioinformatics downstream analysis"
requires-python = ">=3.10"
authors = [{name = "DigitAgent Team"}]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.40.0",

    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "h5py>=3.9",

    # LLM
    "anthropic>=0.30.0",
    "openai>=1.0",
    "httpx>=0.25",

    # Bioinformatics Python
    "scanpy>=1.9",
    "anndata>=0.10",
    "gseapy>=1.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "seaborn>=0.12",

    # R bridge
    "rpy2>=3.5.0",

    # Web API (reserved)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",

    # Utility
    "watchfiles>=0.21",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
all = [
    "scanpy>=1.9",
    "pydeseq2>=0.4",
    "mofapy2>=1.0",
    "pytorch-lightning>=2.0",
]

[project.scripts]
passi = "passi.main:main"
passi-server = "passi.api.server:main"

[project.urls]
Homepage = "https://github.com/digitagent/digitagent"
Documentation = "https://digitagent.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
